# playWithFire

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
resources/images/: game info.txt
src/views/: Block.cpp  Block.h  Bomb.cpp  Bomb.h  Box.cpp  Box.h  Button.cpp  Button.h  Controller.cpp  Controller.h  DamagedPlayer.cpp  DamagedPlayer.h  Item.cpp  Item.h  Label.cpp  Label.h  Lable.cpp  Lable.h  Player.cpp  Player.h  Wall.cpp  Wall.h  playerInformation.cpp  playerInformation.h  textField.cpp  textField.h
src/windows/: Game.cpp  Game.h  Home.cpp  Home.h  InputPage.cpp  InputPage.h  Result.cpp  Result.h
